[package]
name = "serde_mol2"
version = "0.1.2"
edition = "2021"
authors = ["Jaroslaw Kalinowski <jaroslaw.kalinowski@csc.fi>"]

[package.metadata.release]
dev-version = false
publish = false # handled by GitHub Actions
push = true

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.8"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.1.4"
clap = "2.32.0"
pyo3 = { version = "0.15", features = ["extension-module", "serde"] }
rusqlite = { version = "0.26.3", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.26"
zstd = "0.9"
