[package]
name = "serde_mol2"
version = "0.2.1"
edition = "2021"
authors = ["Jaroslaw Kalinowski <jaroslaw.kalinowski@csc.fi>"]

[package.metadata.release]
dev-version = false
publish = false # handled by GitHub Actions
push = true

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.8"

[lib]
name = "serde_mol2"
path = "src/lib.rs"
crate-type = [
  "cdylib",
  "lib",
]

[[bin]]
name = "serde-mol2"
path = "src/bin/bin.rs"

[dependencies]
bincode = "1.1.4"
clap = "3.0.6"
pyo3 = { version = "0.15", features = ["extension-module", "serde"] }
rusqlite = { version = "0.26.3", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.26"
zstd = "0.9"
